tests/test_assets/semantic/invalid/enums/backing_type.cog
BadBacking :: enum(f32) {
    A,
}