tests/test_assets/semantic/invalid/enums/backing_type.expected
semantic error at line 1: enum backing type must be an integer type
1 semantic error generated.
